   sudo to allow users to run mpg123 with arbitrary arguments.
   You should treat out123_open just like the regular open(): You can
   write to any file/device depending on your permissions.
- out123: Changed output of --test-encodings to list of encoding names
  instead of raw bitmask value.
- libout123: Added hex and txt (plain text) printout.

1.25.7
------
- mpg123:
-- Do not play with cursor and inverse video for progress bar
   when TERM=dumb.
-- Fix parsing of host port for numerical IPv6 addresses (just did
   not work before, only for textual host names).
- libmpg123: Proper fix for the xrpnt overflow problems by correctly
  initialising certain tables for MPEG 2.x layer III. The checks that
  catch the resulting overflow are still in place, but likely superfluous
  now. Note that this means certain valid files would have been misdecoded
  before, if anyone actually produced them. Thanks to Robert Hegemann for
  the fix!

1.25.6
------
- Hotfix for bug 255: Overflow reading frame data bits in layer II decoding.
  Now, all-zero data is returned if the frame data is exhausted. This might
  have a slight impact on performance, but not easily measurable so far.

1.25.5
------
- Avoid another buffer read overflow in the ID3 parser on 32 bit platforms
  (bug 254).

1.25.4
------
- Better configure checks for i?86-apple-darwin (bug 253).
- libmpg123:
-- Prevent harmless call to memcpy(NULL, NULL, 0).
-- More early checking of ID3v2 encoding values to avoid bogus text being
   stored.

1.25.3
------
- libmpg123:
-- Better checks for xrpnt overflow in III_dequantize_sample() before each
   use, avoiding false positives and catching cases that were rendered
   harmless by alignment-enlarged buffers.

1.25.2
------
- libmpg123:
-- Extend pow tables for layer III to properly handle files with i-stereo and
   5-bit scalefactors. Never observed them for real, just as fuzzed input to
   trigger the read overflow. Note: This one goes on record as CVE-2017-11126,